--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="invalid_username">Username must be 5 characters or greater</string>
     <string name="login_failed">"Login failed"</string>
     <string name="title_activity_main">MainActivity</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_home">Mi equipo y mis cartas</string>
+    <string name="title_dashboard">Abrir el sobreee</string>
+    <string name="title_notifications">PELEA PELEA PELEAA</string>
 </resources>
