--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="action_create_user">Create user</string>
     <string name="welcome">"Welcome !"</string>
     <string name="invalid_nickname">Nickname must be 5 characters or greater</string>
+    <string name="registration_failed">"Registration failed"</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_cards">Mis cartas</string>
     <string name="title_envelope">Abrir Sobre</string>
