--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="prompt_nickname">Choose a nickname</string>
     <string name="action_create_user">Create user</string>
     <string name="invalid_nickname">Nickname must be 5 characters or greater</string>
+    <string name="empty_nickname">Nickname must not be empty</string>
     <string name="registration_failed">Registration failed</string>
     <!--main-->
     <string name="welcome">Welcome, %1$s!</string>
