Add logout button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="title_bundle">Open Bundle</string>
     <!--fight-->
     <string name="title_fight">Fight</string>
+    <!--logout-->
+    <string name="title_logout">Logout</string>
 </resources>
