Updated bundle page's styles.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="title_fight">Fight</string>
     <!--logout-->
     <string name="title_logout">Logout</string>
+    <string name="get_card">GO</string>
 </resources>
