--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,8 +15,8 @@
     <string name="text_team">My Team</string>
     <string name="text_others">My Cards</string>
     <string name="btn_create_team">Create Team</string>
-    <string name="btn_create_team_counter">Create Team (%1$d)</string>
     <string name="btn_show_single_card_back">Listo</string>
+    <string name="btn_create_team_counter">Create Team (%1$d/4)</string>
     <!--bundle-->
     <string name="title_bundle">Open Bundle</string>
     <!--fight-->
