--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,9 @@
     <string name="title_bundle">Open Bundle</string>
     <!--fight-->
     <string name="title_fight">Fight</string>
+    <string name="title_return_fight">Volver a buscar Oponente</string>
+    <string name="title_search_figth">Buscando Oponente</string>
+    <string name="title_not_found_oponent">Buscando Oponente</string>
     <!--logout-->
     <string name="title_logout">Logout</string>
     <string name="get_card">GO</string>
