--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,10 +23,12 @@
     <!--bundle-->
     <string name="title_bundle">Open Bundle</string>
     <!--fight-->
-    <string name="title_fight">Pelea</string>
-    <string name="title_return_fight">Volver a buscar Oponente</string>
-    <string name="title_search_figth">Buscando Oponente</string>
+    <string name="title_fight">Fight</string>
+    <string name="title_return_fight">Search again</string>
+    <string name="title_search_figth">Looking for an opponent</string>
     <string name="title_fight_notfound">Opponent not found</string>
+    <string name="title_fight_winner">Congratulations !! You Win</string>
+    <string name="title_fight_loser">You have lost !!</string>
     <!--logout-->
     <string name="title_logout">Logout</string>
     <string name="get_card">GO</string>
