--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="text_nocards_firstline">You don\'t have cards yet.</string>
     <string name="text_nocards_secondline">Let\'s start opening a bundle!</string>
     <string name="btn_create_team">Create Team</string>
-    <string name="btn_show_single_card_back">Listo</string>
+    <string name="btn_show_single_card_back">Back</string>
     <string name="btn_create_team_no_counter">Create Team</string>
     <string name="btn_create_team_counter">Create Team (%1$d/4)</string>
     <!--bundle-->
