--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -14,8 +14,8 @@
     <string name="text_card_power">Poder: %1$d</string>
     <string name="text_team">Mi Equipo</string>
     <string name="text_others">Mis Cartas</string>
-    <string name="text_nocards_firstline">Todavía no tienes cartas.</string>
-    <string name="text_nocards_secondline">Empecemos abriendo un sobre!</string>
+    <string name="text_no_cards_first_line">Todavía no tienes cartas.</string>
+    <string name="text_no_cards_second_line">Empecemos abriendo un sobre!</string>
     <string name="btn_create_team">Crear Equipo</string>
     <string name="btn_show_single_card_back">Listo</string>
     <string name="btn_create_team_no_counter">Crear Equipo</string>
@@ -26,8 +26,8 @@
     <!--fight-->
     <string name="title_fight">Pelea</string>
     <string name="title_return_fight">Buscar otra vez</string>
-    <string name="title_search_figth">Buscando oponente</string>
-    <string name="title_fight_notfound">No se ha encontrado oponente</string>
+    <string name="title_search_fight">Buscando oponente</string>
+    <string name="title_fight_not_found">No se ha encontrado oponente</string>
     <string name="title_fight_winner">Felicidades !! Ganaste</string>
     <string name="title_fight_loser">Has perdido !!</string>
     <!--logout-->
