--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -33,6 +33,8 @@
     <string name="title_fight_not_found">No se ha encontrado oponente</string>
     <string name="title_fight_winner">Felicidades !! Ganaste</string>
     <string name="title_fight_loser">Has perdido !!</string>
+    <string name="item_fight_win">Victorias: %1$d</string>
+    <string name="item_fight_loss">Derrotas: %1$d</string>
     <!--logout-->
     <string name="title_logout">Cerrar Sesión</string>
     <string name="get_card">Abrir</string>
